# sm

./: CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  README.tpl  aliases.js  appveyor.yml  crates-io.md  default.nix  rust-toolchain  rustfmt.toml  search-index.js
.circleci/: config.yml
benches/: sm.rs
examples/: README.md  lock.rs  turnstile.rs
examples/game-loop/: README.md  main.rs
examples/turnstile-macro/: README.md  main.rs
examples/turnstile-manual/: README.md  main.rs
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/fmt/: trait.Debug.js
implementors/core/marker/: trait.Copy.js  trait.Send.js  trait.Sync.js
implementors/sm/: trait.Event.js
sm/: AsEnum.t.html  Cargo.toml  Event.t.html  InitialState.t.html  NoneEvent.t.html  State.t.html  Transition.t.html  all.html  index.html  sidebar-items.js  struct.NoneEvent.html  trait.AsEnum.html  trait.Event.html  trait.InitialState.html  trait.Initializer.html  trait.Machine.html  trait.State.html  trait.Transition.html
sm/benches/: sm.rs
sm/src/: lib.rs
sm/tests/: tests.rs
sm/tests/compile-fail/: event-no-clone.rs  event-no-debug.rs  event-no-eq.rs  machine-invalid-type.rs  machine-no-debug.rs  machine-no-eq.rs  macro-empty.rs  macro-events-empty.rs  macro-events-unknown-from-state.rs  macro-events-unknown-to-state.rs  macro-states-duplicate.rs  macro-states-invalid-name.rs  macro-states-none.rs  state-no-clone.rs  state-no-debug.rs  state-no-eq.rs  undefined-event.rs  undefined-state.rs  undefined-transition.rs
sm/tests/run-pass/: enum-wrapped-machine.rs  macro-empty.rs  macro-events-empty.rs  macro-events-multiple.rs  macro-events-none.rs  macro-events-single.rs  macro-events-unknown-from-state.rs  macro-events-unknown-to-state.rs  macro-states-duplicate.rs  macro-states-multiline-dangling-comma.rs  macro-states-multiline.rs  macro-states-multiple-dangling-comma.rs  macro-states-multiple.rs
sm_macro/: Cargo.toml  all.html  index.html  macro.sm.html  sidebar-items.js  sm.m.html
sm_macro/benches/: sm.rs
sm_macro/src/: lib.rs
sm_macro/src/sm/: event.rs  initial_state.rs  machine.rs  mod.rs  state.rs  transition.rs
src/: lib.rs
src/sm/: lib.rs.html
src/sm_macro/: lib.rs.html
src/sm_macro/sm/: event.rs.html  initial_state.rs.html  machine.rs.html  mod.rs.html  state.rs.html  transition.rs.html
test_suite/: Cargo.toml
test_suite/tests/: compiletest.rs  test_enum.rs  test_initialise.rs  test_transition.rs
test_suite/tests/compile-fail/derives/: clone.rs  debug.rs  eq.rs
test_suite/tests/compile-fail/macros/sm/: comma-separated-transitions.rs  empty-machine.rs  empty.rs  invalid-initial-state.rs  invalid-initial-states-block.rs  invalid-states-block.rs  invalid-transition.rs  mismatched-type.rs  multiple-empty-transitions.rs  private-machine-state.rs  single-empty-transition.rs  undefined-state.rs
test_suite/tests/run-pass/macros/sm/: clone.rs  multiple-1to1-transition.rs  multiple-empty-transitions.rs  multiple-machines.rs  multiple-nto1-transition.rs  multiple-state.rs  none-as-event.rs  single-1to1-transition.rs  single-empty-transition.rs  single-nto1-transition.rs  single-state.rs  undefined-state.rs  unrelated-initial-state.rs
tests/: tests.rs
tests/compile-fail/: event-no-debug.rs  machine-invalid-type.rs  machine-no-debug.rs  macro-events-empty.rs  macro-events-unknown-from-state.rs  macro-events-unknown-to-state.rs  macro-states-duplicate.rs  macro-states-invalid-name.rs  state-no-clone.rs  state-no-debug.rs  state-no-eq.rs  undefined-event.rs  undefined-state.rs  undefined-transition.rs
tests/run-pass/: enum-wrapped-machine.rs  macro-events-multiple.rs  macro-events-none.rs  macro-events-single.rs  macro-states-multiline-dangling-comma.rs  macro-states-multiline.rs  macro-states-multiple-dangling-comma.rs  macro-states-multiple.rs
