[package]
name = "sm"
version = "0.4.1-dev"
authors = ["Jean Mertz <helloworld@rustic.games>"]
license = "MIT OR Apache-2.0"
description = "💋 SM – a static State Machine library"
repository = "https://github.com/rusty-rockets/sm"
keywords = ["fsm", "state", "fsm", "state-machine"]
categories = ["game-engines", "no-std", "simulation", "science", "visualization"]
readme = "README.md"

[dev-dependencies]
cargo-readme = "3.0"
cargo-release = "0.10"
criterion = "0.2"

[[bench]]
name = "sm"
harness = false

[badges]
appveyor = { repository = "JeanMertz/sm", service = "github" }
circle-ci = { repository = "rusty-rockets/sm" }
travis-ci = { repository = "rusty-rockets/sm" }
codecov = { repository = "rusty-rockets/sm", branch = "master", service = "github" }
is-it-maintained-issue-resolution = { repository = "rusty-rockets/sm" }
maintenance = { status = "actively-developed" }

[package.metadata.release]
dev-version-ext = "dev"
doc-branch = "gh-pages"
doc-commit-message = "chore(release): generate documentation"
pre-release-commit-message = "chore(release): publish {{version}}"
pro-release-commit-message = "chore(release): start {{version}} iteration"
sign-commit = true
tag-message = "release {{version}}"
upload-doc = true
