[package]
name = "sm"
version = "0.4.1-dev"
authors = ["Jean Mertz <helloworld@rustic.games>"]
license = "MIT OR Apache-2.0"
description = "💋 SM – a static State Machine library"
repository = "https://github.com/rusty-rockets/sm"
keywords = ["fsm", "state", "state-machine"]
categories = ["game-engines", "no-std", "simulation", "science", "visualization"]
readme = "README.md"

[dev-dependencies]
compiletest_rs = "0.3"
criterion = { version = "0.2", features = ["real_blackbox"] }

[[bench]]
name = "sm"
harness = false

[badges]
circle-ci = { repository = "rusty-rockets/sm" }
appveyor = { repository = "JeanMertz/sm", service = "github" }
codecov = { repository = "rusty-rockets/sm", branch = "master", service = "github" }
is-it-maintained-issue-resolution = { repository = "rusty-rockets/sm" }

[package.metadata.release]
dev-version-ext = "dev"
doc-branch = "gh-pages"
doc-commit-message = "chore(release): generate documentation"
pre-release-commit-message = "chore(release): publish {{version}}"
pro-release-commit-message = "chore(release): start {{version}} iteration"
sign-commit = true
tag-message = "release {{version}}"
upload-doc = true
