[package]
name = "sm"
version = "0.6.2-dev"
authors = ["Jean Mertz <helloworld@rustic.games>"]
license = "MIT OR Apache-2.0"
description = "💋 SM – a static State Machine library"
repository = "https://github.com/rusty-rockets/sm"
keywords = ["fsm", "state", "state-machine"]
categories = ["game-engines", "no-std", "simulation", "science", "visualization"]
readme = "crates-io.md"
exclude = ["examples"]

[dependencies]
sm_macro = { version = "0.6", path = "../sm_macro", optional = true }

[dev-dependencies]
compiletest_rs = "0.3"
criterion = { version = "0.2", features = ["real_blackbox"] }
sm_macro = { path = "../sm_macro" }

[features]
macro = ["sm_macro"]
default = ["macro"]

[[bench]]
name = "sm"
harness = false

[badges]
circle-ci = { repository = "rusty-rockets/sm" }
appveyor = { repository = "rusty-rockets/sm", service = "github" }
codecov = { repository = "rusty-rockets/sm", branch = "master", service = "github" }
is-it-maintained-issue-resolution = { repository = "rusty-rockets/sm" }
