[package]
name = "sm"
version = "1.0.0"
authors = ["Jean Mertz <helloworld@rustic.games>"]
license = "MIT OR Apache-2.0"
description = "💋 SM – a static State Machine library"
repository = "https://github.com/rustic-games/sm"
keywords = ["fsm", "state", "state-machine"]
categories = ["game-engines", "no-std", "simulation", "science", "visualization"]
readme = "crates-io.md"
exclude = ["examples"]
edition = "2018"

[dependencies]
sm_macro = { version = "1.0", path = "../sm_macro", optional = true }

[dev-dependencies]
compiletest_rs = { version = "0.3", features = [ "stable" ] }
criterion = "0.3"
rand = "0.5"
sm_macro = { version = "1.0", path = "../sm_macro" }

[features]
macro = ["sm_macro"]
default = ["macro"]

[[bench]]
name = "sm"
harness = false

[badges]
circle-ci = { repository = "rustic-games/sm" }
codecov = { repository = "rustic-games/sm", branch = "master", service = "github" }
is-it-maintained-issue-resolution = { repository = "rustic-games/sm" }
