[package]
name = "sm_macro"
version = "0.5.1-dev"
authors = ["Jean Mertz <helloworld@rustic.games>"]
license = "MIT OR Apache-2.0"
description = "💋 SM – a static State Machine macro"
repository = "https://github.com/rusty-rockets/sm"
keywords = ["fsm", "state", "state-machine"]
categories = ["game-engines", "no-std", "simulation", "science", "visualization"]
readme = "crates-io.md"

[dependencies]
proc-macro2 = "0.4"
quote = "0.6"
syn = "0.15"

[lib]
proc-macro = true

[badges]
circle-ci = { repository = "rusty-rockets/sm" }
appveyor = { repository = "rusty-rockets/sm", service = "github" }
codecov = { repository = "rusty-rockets/sm", branch = "master", service = "github" }
is-it-maintained-issue-resolution = { repository = "rusty-rockets/sm" }
