[package]
name = "sm_macro"
version = "0.8.0"
authors = ["Jean Mertz <helloworld@rustic.games>"]
license = "MIT OR Apache-2.0"
description = "💋 SM – a static State Machine macro"
repository = "https://github.com/rustic-games/sm"
keywords = ["fsm", "state", "state-machine"]
categories = ["game-engines", "no-std", "simulation", "science", "visualization"]
readme = "crates-io.md"
edition = "2018"

[dependencies]
proc-macro2 = "0.4"
quote = "0.6"
syn = "0.15"

[dev-dependencies]
sm = { version = "0.8", path = "../sm" }

[lib]
proc-macro = true

[badges]
circle-ci = { repository = "rustic-games/sm" }
appveyor = { repository = "rusty-rockets/sm", service = "github" }
codecov = { repository = "rustic-games/sm", branch = "master", service = "github" }
is-it-maintained-issue-resolution = { repository = "rustic-games/sm" }
