[package]
name = "sm_macro"
version = "1.0.0"
authors = ["Jean Mertz <helloworld@rustic.games>"]
license = "MIT OR Apache-2.0"
description = "💋 SM – a static State Machine macro"
repository = "https://github.com/rustic-games/sm"
keywords = ["fsm", "state", "state-machine"]
categories = ["game-engines", "no-std", "simulation", "science", "visualization"]
readme = "crates-io.md"
edition = "2018"

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"

[dev-dependencies]
sm = { version = "1.0", path = "../sm" }

[lib]
proc-macro = true

[badges]
circle-ci = { repository = "rustic-games/sm" }
codecov = { repository = "rustic-games/sm", branch = "master", service = "github" }
is-it-maintained-issue-resolution = { repository = "rustic-games/sm" }
